<resources>
    <string name="app_name">TapXchange</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="subtitle">Bump phones to begin if both phones have the app and click on the screen to send contact.
        If the other phone does not have the app then click on SendApk </string>
    <string name="set_contact_btn">Set Contact Info</string>
    <string name="title_activity_set_contact">TapXchange</string>

    <string name="set_contact_activity_title">Set Your Contact Info</string>
    <string name="full_name_label">Full Name</string>
    <string name="phone_num_label">Phone Number</string>
    <string name="email_label">Email Address</string>
    <string name="home_addr_label">Address</string>
    <string name="organization_label">Organization</string>
    <string name="set_contact_info_btn_lbl">Set</string>
    <string name="title_activity_nfcdisplay">NFCDisplayActivity</string>
    <string name="send_apk">Send APK</string>
    <string name="title_activity_send_apk">SendApkActivity</string>
    <string name="instructions">1.Bump Phones and click on the screen."\n""\n"
                                2.Wait for the android beam to be sent to the other phone and make sure none of the devices go to sleep."\n""\n"
                                3.Click on the recieved file on the other phone. If it says cannot install go to settings and check Install from unknown sources."\n""\n"
                                4.Install the app on the other phone and start it."\n""\n"
                                5.On this phone go back to the previous screen and send contact.</string>
</resources>
