<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView android:text="@string/subtitle"
        android:layout_width="wrap_content"
        android:id="@+id/subtitle_text"
        style="@android:style/TextAppearance.Large"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_gravity="center"
        android:layout_marginBottom="300dp"
         />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/set_contact_info_btn"
        android:text="@string/set_contact_btn"
        android:gravity="center"
            android:layout_marginLeft="60dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_apk"
            android:text="@string/send_apk"
            android:gravity="center" />
    </LinearLayout>


</LinearLayout>
