<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gankmobile.android.tapexchange.SetContactActivity">

    <TextView android:text="@string/set_contact_activity_title"
        style="@android:style/TextAppearance.Large"
        android:id="@+id/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_below="@id/activity_title"
        android:id="@+id/label_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Medium"
            android:text="@string/full_name_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@android:style/TextAppearance.Medium"
            android:text="@string/phone_num_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@android:style/TextAppearance.Medium"
            android:text="@string/email_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@android:style/TextAppearance.Medium"
            android:text="@string/home_addr_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@android:style/TextAppearance.Medium"
            android:text="@string/organization_label"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_title"
        android:paddingTop="20dp"
        android:orientation="vertical"
        android:layout_toRightOf="@id/label_layout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Medium"
            android:id="@+id/full_name_text2"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            style="@android:style/TextAppearance.Medium"
            android:id="@+id/phone_num_text2"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            style="@android:style/TextAppearance.Medium"
            android:id="@+id/email_text2"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            style="@android:style/TextAppearance.Medium"
            android:id="@+id/home_addr_text2"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            style="@android:style/TextAppearance.Medium"
            android:id="@+id/organization_text2"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:text="Save Contact"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>
